--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Task Management Dashboard</title>
+    <title>Task Manager</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <script src="index.js"></script>
+    <h1>Task Management Dashboard</h1>
+    <button>Add Task</button>
+    <button>Sort Tasks</button>
   </body>
 </html>
