Add "Sort by status" dropdown

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,6 +16,11 @@
     <input type="text" id="textField" name="textField"><br><br>
     <input type="submit" value='Add Task'>
     </fieldset>
-    <button>Sort Tasks</button>
+    <label name="tasks">Sort by status</label>
+    <select id="tasks">
+      <option value="all">All</option>
+      <option value="active">Active</option>
+      <option value="complete">Complete</option>
+    </select>
   </body>
 </html>
