Turn "Sort by status'' dropdown into a button

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <input type="text" id="textField" name="textField"><br><br>
     <input type="submit" value='Add Task'>
     </fieldset>
-    <label name="tasks">Sort by status</label>
+    <button>
     <select id="tasks">
       <option value="all">All</option>
       <option value="active">Active</option>
       <option value="complete">Complete</option>
     </select>
+    </button>
   </body>
 </html>
