--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,8 +11,7 @@
     <script src="index.js"></script>
     <h1>Task Management Dashboard</h1>
     <fieldset>
-      <label for="textField">Task Title</label><br>
-    <input type="text" id="textField" name="textField"><br><br>
+    <input type="text" placeholder="Task Title" id="textField" name="textField"><br><br>
     <input type="submit" value='Add Task'>
     </fieldset>
     <button>
@@ -32,5 +30,6 @@
         <option value="low">Low Priority</option>
       </select>
     </button>
+    
   </body>
 </html>
