Add "Description" input

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       
     <input type="text" placeholder="Task Title" id="titleField" name="title_field">
       <label for="dateField">Due Date</label>
-    <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br><br>
+    <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field">
+      <input type="text" placeholder="Description (optional)"><br><br>
       <input type="submit" value='Add Task'>
     </fieldset>
     <button>
