--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <script src="index.js"></script>
     <h1>Task Management Dashboard</h1>
     <fieldset>
-      
     <input type="text" placeholder="Task Title" id="titleField" name="title_field">
+      <input type="text" placeholder="Description (optional)">
       <label for="dateField">Due Date</label>
-    <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field">
-      <input type="text" placeholder="Description (optional)"><br><br>
+    <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br><br>
       <input type="submit" value='Add Task'>
     </fieldset>
     <button>
