--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="index.js"></script>
     <h1>Task Management Dashboard</h1>
     <fieldset>
-    <input type="text" placeholder="Task Title" id="titleField" name="title_field">
+    <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
       <input type="text" placeholder="Description (optional)">
       <label for="dateField">Due Date</label>
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br><br>
