--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div>
     <script src="index.js"></script>
     <h1>Task Management Dashboard</h1>
     <fieldset>
@@ -33,6 +34,6 @@
         <option value="low">Low Priority</option>
       </select>
     </button>
-    
+    </div>
   </body>
 </html>
