--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="task-manager/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Task Manager</title>
     
   </head>
