Give fieldset element an ID

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
     <script src="index.js"></script>
     <h1>Task Management Dashboard</h1>
-    <fieldset>
+    <fieldset id="field">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
       <input type="text" placeholder="Description (optional)">
       <label for="dateField">Due Date</label>
