Remove in-line styling on html tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Task Manager</title>
     
   </head>
-  <body style="rgb:(105,105,105)">
+  <body>
     <div>
     <script src="index.js"></script>
     <h1>Task Management Dashboard</h1>
