--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Task Manager</title>
-    
+    <style>
+      #field {
+        background-colour: white;
+      }
+    </style>
   </head>
   <body>
     <div>
