Change colour of #field to light grey

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Task Manager</title>
     <style>
       #field {
-        background-colour: white;
+        background-colour: #808080;
         border-radius: 10px;  
       }
       
