Change background colour of #field to grey using rgb method

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Task Manager</title>
     <style>
       #field {
-        background-colour: #808080;
+        background-colour: rgb(128,128,128);
         border-radius: 10px;  
       }
       
