--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
      option:nth-child(3):hover{
         background-colour: #3498db;
       }
+      
+      #status{
+        background-colour: rgb(128,128,128);
+      }
+
+      #priority {
+        background-colour: rgb(128,128,128);
+      }
     </style>
   </head>
   <body>
@@ -36,7 +44,7 @@
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br><br>
       <input type="submit" value='Add Task'>
     </fieldset>
-    <button>
+    <button id="status">
       Sort by status:
     <select id="tasks">
       <option value="all">All</option>
@@ -44,7 +52,7 @@
       <option value="complete">Complete</option>
     </select>
     </button>
-    <button>
+    <button id="priority">
       Sort by priority:
       <select>
         <option value="high">High Priority</option>
