Style fieldset using an element selctor instead of an id selector

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Task Manager</title>
     <style>
-      #field {
+      fieldset {
         background-colour: rgb(128,128,128);
         border-radius: 10px;  
       }
