--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Task Manager</title>
     <style>
-      fieldset {
+      form {
         background-colour: rgb(128,128,128);
         border-radius: 10px;  
       }
@@ -17,13 +17,13 @@
     <div>
     <script src="index.js"></script>
     <h1>Task Management Dashboard</h1>
-    <fieldset id="field">
+    <form id="field">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
       <input type="text" placeholder="Description (optional)">
       <label for="dateField">Due Date</label>
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br><br>
       <input type="submit" value='Add Task'>
-    </fieldset>
+    </form>
     
       <label for="status">Sort by status:</label>
     <select name="status" id="status">
