Add a line break after select elements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <option value="high">High Priority</option>
         <option value="medium">Medium Priority</option>
         <option value="low">Low Priority</option>
-      </select>
+      </select><br>
     
     <fieldset id="field">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
