--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
       <input type="text" placeholder="Description (optional)">
       <label for="dateField">Due Date</label>
-    <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br><br>
+    <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br>
+      <label for="">Priority Level</label>
+      <select name="priorityLevel" id="priorityLevel">
+        <option>High</option>
+        <option>Medium</option>
+        <option>Low</option>
+      </select>
       <input type="submit" value='Add Task'>
     </fieldset>
     
