Add 2 line breaks after select element in fieldset + a line break after "description" input element

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <fieldset id="field">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
-      <input type="text" placeholder="Description (optional)">
+      <input type="text" placeholder="Description (optional)"><br>
       <label for="dateField">Due Date</label>
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br>
       <label for="">Priority Level</label>
@@ -41,7 +41,7 @@
         <option>High</option>
         <option>Medium</option>
         <option>Low</option>
-      </select>
+      </select><br><br>
       <input type="submit" value='Add Task'>
     </fieldset>
     
