Add an unordered list element

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       }
     </style>
   </head>
+  
   <body>
     <script src="index.js"></script>
     <h1>Task Management Dashboard</h1>
@@ -30,6 +31,8 @@
         <option value="medium">Medium Priority</option>
         <option value="low">Low Priority</option>
       </select><br>
+
+    <ul id="activeList"></ul>
     
     <fieldset id="field">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
