Add a second unordered list element for completed tasks

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </select><br>
 
     <ul id="activeList"></ul>
+    <ul id="completeList"></ul>
     
     <fieldset id="field">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
