Wrap everything in fieldset (except the "submit" input) in div tags

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <ul id="completeList"></ul>
     
     <fieldset id="field">
+      <div>
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
       <input type="text" placeholder="Description (optional)"><br>
       <label for="dateField">Due Date</label>
@@ -46,6 +47,7 @@
         <option>Medium</option>
         <option>Low</option>
       </select><br><br>
+      </div>
       <input type="submit" value='Add Task'>
     </fieldset>
     
