Wrap unordered lists in a div element

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <option value="medium">Medium Priority</option>
         <option value="low">Low Priority</option>
       </select><br>
-
+<div>
     <ul id="activeList"></ul>
     <ul id="completeList"></ul>
-    
+</div>
     <fieldset id="field">
       <div>
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
