Add id attributes to option elements in the select element for choosing priority

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br>
       <label for="">Priority Level</label>
       <select name="priorityLevel" id="priorityLevel">
-        <option>High</option>
-        <option>Medium</option>
-        <option>Low</option>
+        <option id="high">High</option>
+        <option id="medium">Medium</option>
+        <option id="low">Low</option>
       </select><br><br>
       </div>
       <input type="submit" value='Add Task'>
