Give the div element that wraps most of the elements in fieldset an id

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <ul id="completeList"></ul>
 </div>
     <fieldset id="field">
-      <div>
+      <div id="taskCard">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
       <input type="text" placeholder="Description (optional)"><br>
       <label for="dateField">Due Date</label>
