Wrap option elements in fieldset with button tags

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br>
       <label for="">Priority Level</label>
       <select name="priorityLevel" id="priorityLevel">
-        <option id="high">High</option>
-        <option id="medium">Medium</option>
-        <option id="low">Low</option>
+      <button>  <option id="high">High</option> </button>
+       <button> <option id="medium">Medium</option> </button>
+       <button> <option id="low">Low</option> </button>
       </select><br><br>
       </div>
       <input type="submit" value='Add Task'>
