--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br>
       <label for="">Priority Level</label>
       <select name="priorityLevel" id="priorityLevel">
-      <button data-color="#e74c3c">  <option id="high">High</option> </button>
-       <button data-color="#f39c12"> <option id="medium">Medium</option> </button>
-       <button data-color="#3498db"> <option id="low">Low</option> </button>
+      <button id="red" data-color="#e74c3c">  <option id="high">High</option> </button>
+       <button id="orange" data-color="#f39c12"> <option id="medium">Medium</option> </button>
+       <button id="blue" data-color="#3498db"> <option id="low">Low</option> </button>
       </select><br><br>
       </div>
       <input type="submit" value='Add Task'>
