Colour first button in fieldset red

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         background-color: rgb(128,128,128);
         border-radius: 10px;  
       }
+      #red {
+       background-color:"#e74c3c" 
+      }
     </style>
   </head>
   
