Syntax correction on line colouring first button in fieldset to red

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         border-radius: 10px;  
       }
       #red {
-       background-color:"#e74c3c" 
+       background-color:#e74c3c; 
       }
     </style>
   </head>
