Add internal JS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Task Manager</title>
+    <script>
+const activeCounter = 0
+const completeCounter = 0
+
+
+document.addEventListener("DOMContentLoaded", function addTask() => {
+document.querySelector("#submit").onclick = () => {
+Const activeTask = document.createElement("li").innerHTML = document.querySelector("div").value 
+document.querySelector("#activeList").append(activeTask)
+
+document.createElement("button")
+document.querySelector("activeTask").append("button")
+
+Document.querySelector("taskField").value = ""
+activeCounter++
+}
+}) 
+    </script>
     <script src="index.js"></script>
     <style>
       fieldset {
