--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ const completeCounter = 0
 
 
 document.addEventListener("DOMContentLoaded", function addTask() => {
-document.querySelector("#submit").onclick = () => {
+document.querySelector("[value='Add Task']").onclick = () => {
 Const activeTask = document.createElement("li").innerHTML = document.querySelector("div").value 
 document.querySelector("#activeList").append(activeTask)
 
