--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ const completeCounter = 0
 
 document.addEventListener("DOMContentLoaded", function addTask() {
 document.querySelector("[value='Add Task']").onclick = () => {
-Const activeTask = document.createElement("li").innerHTML = document.querySelector("div").value 
+Const activeTask = document.createElement("li").innerHTML = document.querySelector("#taskCard").value 
 document.querySelector("#activeList").append(activeTask)
 
 document.createElement("button")
