Give the input field for task description an id attribute

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ activeCounter++
     <fieldset id="field">
       <div id="taskCard">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
-      <input type="text" placeholder="Description (optional)"><br>
+      <input id ="description" type="text" placeholder="Description (optional)"><br>
       <label for="dateField">Due Date</label>
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br>
       <label for="">Priority Level</label>
