Give p tags id attributes

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ activeCounter++
         <option value="low">Low Priority</option>
       </select><br>
 <div>
-  <p></p>
+  <p id="activeCounter"></p>
     <ul id="activeList"></ul>
-  <p></p>
+  <p id="completeCounter"></p>
     <ul id="completeList"></ul>
 </div>
     <fieldset id="field">
