--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="style.css">
     <title>Task Manager</title>
     <script>
-const activeCounter = 0
+document.addEventListener("DOMContentLoaded", function addTask() => {
+//When the submit button is clicked:
+document.querySelector("[value='Add Task']").onclick =
+() =>
+
+const taskId = Math.floor(Math.random() * 10000) 
+const taskCard = {}
+const activeCounter = 0 
 const completeCounter = 0
-
-
-document.addEventListener("DOMContentLoaded", function addTask() {
-document.querySelector("[value='Add Task']").onclick = () => {
-Const activeTask = document.createElement("li").innerHTML = document.querySelector("#taskCard").value 
-document.querySelector("#activeList").append(activeTask)
-
-document.createElement("button")
-document.querySelector("activeTask").append("button")
-
-Document.querySelector("taskField").value = ""
+  
+taskCard.name = document.querySelector("#taskField").value
+taskCard.id = taskId
+taskCard.priorityLevel = document.querySelector("#priorityLevel").value 
+taskCard.description = document.querySelector("#description").value
+taskCard.date = document.querySelector("#dateField").value 
+document.createElement("li").value = taskCard 
+document.querySelector("#activeList").append("li")  
+activeTasks.push(taskCard)
 activeCounter++
-}
-}) 
+document.querySelector("#activeCounter").innerHTML = activeCounter
     </script>
     <script src="index.js"></script>
     <style>
