--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Task Manager</title>
     <script>
-document.addEventListener("DOMContentLoaded", function addTask() => {
+document.addEventListener("DOMContentLoaded", function addTask() {
 //When the submit button is clicked:
 document.querySelector("[value='Add Task']").onclick =
-() =>
+function () {
 
 const taskId = Math.floor(Math.random() * 10000) 
 const taskCard = {}
@@ -27,7 +27,7 @@ document.querySelector("#activeList").append("li")
 activeTasks.push(taskCard)
 activeCounter++
 document.querySelector("#activeCounter").innerHTML = activeCounter
-})
+}});
     </script>
     <script src="index.js"></script>
     <style>
