--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Document.querySelector("[value='Add Task']").disabled === false
       fieldset {
         background-color: rgb(128,128,128);
         border-radius: 10px;  
+        border-width: 2px;
       }
     </style>
   </head>
