Make the border of fieldset solid

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ Document.querySelector("[value='Add Task']").disabled === false
         background-color: rgb(128,128,128);
         border-radius: 10px;  
         border-width: 5px;
+        border-style: solid;
         border-color: black:
       }
     </style>
