Give input for submit an id attribute

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Document.querySelector("[value='Add Task']").disabled === false
        <button id="blue" data-color="#3498db"> <option id="low">Low</option> </button>
       </select><br><br>
       </div>
-      <input type="submit" value='Add Task'>
+      <input id = "addTask" type="submit" value='Add Task'>
     </fieldset>
     
       
