Put a form element around the fieldset element

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ document.querySelector("#activeCounter").innerHTML = activeCounter
     <ul id="completeList"></ul>
 </div>
     <fieldset id="field">
+      <form>
       <div id="taskCard">
     <input type="text" placeholder="Task Title" id="titleField" name="title_field"><br>
       <input id ="description" type="text" placeholder="Description (optional)"><br>
@@ -87,7 +88,6 @@ document.querySelector("#activeCounter").innerHTML = activeCounter
       </div>
       <input id = "addTask" type="submit" value='Add Task'>
     </fieldset>
-    
-      
+    </form>
   </body>
 </html>
