--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
 document.addEventListener("DOMContentLoaded", function () {
 //When the submit button is clicked:
-document.querySelector("#addTask").onclick =
+document.querySelector("form").onsubmit =
 function () {
 
 const taskId = Math.floor(Math.random() * 10000) 
