--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script>
 document.addEventListener("DOMContentLoaded", function () {
 //When the submit button is clicked:
+  document.querySelector("#addTask").disabled
 document.querySelector("#addTask").onclick =
 function () {
   
