--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ const activeTasks = [];
 const completeTasks = [];
   
   
-taskCard.name = document.querySelector("#taskField").value
+taskCard.name = document.querySelector("#titleField").value
 taskCard.id = taskId
 taskCard.priorityLevel = document.querySelector("#priorityLevel").value 
 taskCard.description = document.querySelector("#description").value
