--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ document.querySelector("#activeCounter").innerHTML = activeCounter
       <input id ="description" type="text" placeholder="Description (optional)"><br>
       <label for="dateField">Due Date</label>
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br>
-      <label for="">Priority Level</label>
+      <label for="#priorityLevel">Priority Level</label>
       <select name="priorityLevel" id="priorityLevel">
       <button id="red" data-color="#e74c3c">  <option id="high">High</option> </button>
        <button id="orange" data-color="#f39c12"> <option id="medium">Medium</option> </button>
