--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@ document.querySelector("#activeCounter").innerHTML = activeCounter
   </head>
   
   <body>
-    
     <h1>Task Management Dashboard</h1>
 
     <label for="status">Sort by status:</label>
@@ -82,12 +81,12 @@ document.querySelector("#activeCounter").innerHTML = activeCounter
     <input type="text" placeholder="XX/XX/XX" id="dateField" name="date_field"><br>
       <label for="#priorityLevel">Priority Level</label>
       <select name="priorityLevel" id="priorityLevel">
-      <button id="red" data-color="#e74c3c">  <option id="high">High</option> </button>
-       <button id="orange" data-color="#f39c12"> <option id="medium">Medium</option> </button>
-       <button id="blue" data-color="#3498db"> <option id="low">Low</option> </button>
+      <option data-background-color="#e74c3c" id="high">High</option> 
+      <option data-background-color="#f39c12" id="medium">Medium</option>
+      <option data-background-color="#3498db" id="low">Low</option>
       </select><br><br>
       </div>
-      <input id = "addTask" type="submit" value='Add Task'>
+      <input id="addTask" type="submit" value='Add Task'>
     </fieldset>
   </body>
 </html>
