--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 document.addEventListener("DOMContentLoaded", function () {
 //When the submit button is clicked:
   document.querySelector("#addTask").disabled = true
-document.querySelector("#addTask").onclick =
+document.querySelector("#titleField").onkeyup =
 function () {
   
 if (!document.querySelector("#titleField").value.length > 0) {
